@@ -1,5 +1,11 @@
 h1. CHANGELOG
 
+h3. 3.1.32 February 9, 2018
+
+* Bootstrap 4 was released Jan 18, 2018 so no need to specify '~> 4.0.0.alpha6'
+* no need to warn about SimpleForm being incompatible with Rails 5.1
+* show the version of rails_apps_composer when Rails Composer runs
+
 h3. 3.1.31 February 9, 2018
 
 * for Rails 5.2 and newer, create 'config/secrets.yml' file whether or not the secrets preference is set
